--- a/app/src/main/res/layout/c_chats_message_headline_item.xml
+++ b/app/src/main/res/layout/c_chats_message_headline_item.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
-	android:layout_height = "match_parent">
+	android:layout_height = "match_parent"
+	android:background = "@drawable/shape_message_headline">
 	<ImageView android:id = "@+id/avatar"
 		android:layout_width = "40dp"
 		android:layout_height = "40dp"
@@ -10,25 +11,34 @@
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		android:layout_marginVertical = "8dp"
-		android:layout_marginBottom = "16dp"
-		android:layout_marginStart = "16dp"
+		android:layout_marginStart = "12dp"
 		android:background = "@drawable/shape_avatar_3"/>
-	<TextView android:id = "@+id/message"
+	<ImageView android:id = "@+id/online"
+		android:layout_width = "16dp"
+		android:layout_height = "16dp"
+		app:layout_constraintTop_toTopOf = "@+id/avatar"
+		app:layout_constraintStart_toStartOf = "@+id/avatar"
+		android:layout_marginTop = "26dp"
+		android:layout_marginStart = "26dp"
+		android:background = "@drawable/shape_avatar_badge"/>
+	<TextView android:id = "@+id/company_contact_face_full_name"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "@+id/avatar"
 		app:layout_constraintStart_toEndOf = "@+id/avatar"
 		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_marginHorizontal = "16dp"
+		android:layout_marginStart = "12dp"
+		android:layout_marginEnd = "16dp"
 		android:textStyle = "bold"
 		android:textColor = "@color/font_color"
-		android:text = "Колесников Вячеслав Владимирович"/>
-	<TextView android:id = "@+id/time"
-		android:layout_width = "wrap_content"
+		android:text = "@string/company_contact_face_full_name"/>
+	<TextView android:id = "@+id/company_contact_face_position"
+		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/message"
+		app:layout_constraintTop_toBottomOf = "@+id/company_contact_face_full_name"
 		app:layout_constraintBottom_toBottomOf = "@+id/avatar"
-		app:layout_constraintStart_toStartOf = "@+id/message"
+		app:layout_constraintStart_toStartOf = "@+id/company_contact_face_full_name"
+		app:layout_constraintEnd_toEndOf = "@+id/company_contact_face_full_name"
 		android:textColor = "@color/font_color"
-		android:text = "HR менеджер"/>
+		android:text = "@string/company_contact_face_position"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
