--- a/app/src/main/res/drawable/ic_plus.xml
+++ b/app/src/main/res/drawable/ic_plus.xml
@@ -1,8 +1,8 @@
-<vector
-        android:height="32dp"
-        android:viewportHeight="512"
-        android:viewportWidth="448"
-        android:width="32dp"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/font_color" android:pathData="M416,208H272V64c0,-17.67 -14.33,-32 -32,-32h-32c-17.67,0 -32,14.33 -32,32v144H32c-17.67,0 -32,14.33 -32,32v32c0,17.67 14.33,32 32,32h144v144c0,17.67 14.33,32 32,32h32c17.67,0 32,-14.33 32,-32V304h144c17.67,0 32,-14.33 32,-32v-32c0,-17.67 -14.33,-32 -32,-32z"/>
+<vector xmlns:android = "http://schemas.android.com/apk/res/android"
+	android:viewportWidth = "448"
+	android:viewportHeight = "512"
+	android:width = "28dp"
+	android:height = "32dp">
+	<path android:fillColor = "@color/font_color"
+		android:pathData = "M416,208H272V64c0,-17.67 -14.33,-32 -32,-32h-32c-17.67,0 -32,14.33 -32,32v144H32c-17.67,0 -32,14.33 -32,32v32c0,17.67 14.33,32 32,32h144v144c0,17.67 14.33,32 32,32h32c17.67,0 32,-14.33 32,-32V304h144c17.67,0 32,-14.33 32,-32v-32c0,-17.67 -14.33,-32 -32,-32z"/>
 </vector>
