--- a/app/src/main/res/drawable/shape_avatar_badge.xml
+++ b/app/src/main/res/drawable/shape_avatar_badge.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid
-        android:color="@color/online"
-    />
-    <corners
-        android:radius="32dp"
-    />
-    <stroke
-        android:width="2dp"
-        android:color="@color/white"
-    />
+<shape xmlns:android = "http://schemas.android.com/apk/res/android">
+	<solid android:color = "@color/online"/>
+	<corners android:radius = "32dp"/>
+	<stroke android:width = "2dp"
+		android:color = "@color/white"/>
 </shape>
