--- a/app/src/main/res/layout/c_card_hr_avatar_full.xml
+++ b/app/src/main/res/layout/c_card_hr_avatar_full.xml
@@ -5,11 +5,13 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
-	<ExpandableListView android:id = "@+id/exp_list_view"
+	<ImageView android:id = "@+id/avatar"
 		android:layout_width = "0dp"
-		android:layout_height = "match_parent"
+		android:layout_height = "0dp"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintRight_toRightOf = "parent"></ExpandableListView>
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_margin = "16dp"
+		android:background = "@color/theme_1_color_1"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
