--- a/app/src/main/res/layout/c_chats_list_item.xml
+++ b/app/src/main/res/layout/c_chats_list_item.xml
@@ -30,7 +30,7 @@
 		android:layout_marginEnd = "80dp"
 		android:textStyle = "bold"
 		android:textColor = "@color/font_color"
-		android:text = "МЕНЕДЖЕР ПО ПРОДАЖАМ"/>
+		android:text = "@string/vacancy"/>
 	<TextView android:id = "@+id/company"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -41,8 +41,8 @@
 		android:layout_marginStart = "80dp"
 		android:layout_marginEnd = "80dp"
 		android:textColor = "@color/font_color"
-		android:text = "ПРАЙД КОМПЬЮТЕРС"/>
-	<TextView android:id = "@+id/textView2"
+		android:text = "@string/company"/>
+	<TextView android:id = "@+id/time_last_message"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		app:layout_constraintBottom_toBottomOf = "parent"
@@ -50,18 +50,18 @@
 		android:layout_marginBottom = "16dp"
 		android:layout_marginEnd = "16dp"
 		android:textColor = "@color/font_color"
-		android:text = "16:37"/>
-	<TextView android:id = "@+id/textView3"
+		android:text = "@string/chats_message_time"/>
+	<TextView android:id = "@+id/number_of_unread_messages"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_marginTop = "16dp"
 		android:layout_marginEnd = "16dp"
-		android:background = "@drawable/shape_badge"
 		android:textStyle = "bold"
+		android:background = "@drawable/shape_badge"
 		android:textColor = "@color/font_color"
-		android:text = "111"/>
+		android:text = "@string/number_of_unread_messages"/>
 	<View android:id = "@+id/divider"
 		android:layout_width = "match_parent"
 		android:layout_height = "1dp"
