--- a/app/src/main/res/layout/c_chats_message_entry_field_item.xml
+++ b/app/src/main/res/layout/c_chats_message_entry_field_item.xml
@@ -3,7 +3,7 @@
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent">
-	<TextView android:id = "@+id/message"
+	<TextView android:id = "@+id/company_contact_face_full_name"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
