--- a/app/src/main/res/layout/c_chats_message_incoming_item.xml
+++ b/app/src/main/res/layout/c_chats_message_incoming_item.xml
@@ -11,8 +11,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/message_quoted"
 		app:layout_constraintStart_toStartOf = "parent"
 		android:layout_marginStart = "16dp"
-		android:background = "@color/theme_1_color_1"
-	/>
+		android:background = "@color/theme_1_color_1"/>
 	<TextView android:id = "@+id/message_quoted"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -24,7 +23,7 @@
 		android:layout_marginStart = "16dp"
 		android:textColor = "@color/font_color"
 		android:text = "@string/chats_message_text_quoted_message"/>
-	<ImageView android:id = "@+id/imageView"
+	<ImageView android:id = "@+id/avatar"
 		android:layout_width = "16dp"
 		android:layout_height = "16dp"
 		app:layout_constraintTop_toTopOf = "@+id/message_forwarded"
@@ -36,14 +35,13 @@
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toBottomOf = "@+id/message_quoted"
-		app:layout_constraintStart_toEndOf = "@+id/imageView"
+		app:layout_constraintStart_toEndOf = "@+id/avatar"
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_marginTop = "12dp"
 		android:layout_marginStart = "8dp"
 		android:layout_marginEnd = "16dp"
 		android:textColor = "@color/font_color"
-		android:text = "@string/chats_message_text_forwarded_message"
-	/>
+		android:text = "@string/chats_message_text_forwarded_message"/>
 	<TextView android:id = "@+id/message"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -53,8 +51,7 @@
 		android:layout_marginTop = "12dp"
 		android:layout_marginHorizontal = "16dp"
 		android:textColor = "@color/font_color"
-		android:text = "@string/chats_message_text_big"
-		app:layout_constraintHorizontal_bias = "0.125"/>
+		android:text = "@string/chats_message_text_big"/>
 	<TextView android:id = "@+id/time"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
