--- a/app/src/main/res/layout/c_menu_top.xml
+++ b/app/src/main/res/layout/c_menu_top.xml
@@ -19,7 +19,8 @@
 		app:layout_constraintEnd_toStartOf = "@+id/list"
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"
-		android:background = "@color/white"/>
+		android:background = "@color/white"
+		android:inputType = "text"/>
 	<Button android:id = "@+id/bars"
 		android:layout_width = "32dp"
 		android:layout_height = "32dp"
