--- a/app/src/main/res/layout/c_menu_top_chats_item.xml
+++ b/app/src/main/res/layout/c_menu_top_chats_item.xml
@@ -16,32 +16,16 @@
 		app:layout_constraintTop_toTopOf = "@+id/toolbar"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
 		app:layout_constraintStart_toStartOf = "@+id/toolbar"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/ic_back"/>
-	<ImageView android:id = "@+id/avatar"
-		android:layout_width = "40dp"
-		android:layout_height = "40dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
-		app:layout_constraintStart_toEndOf = "@+id/bars"
 		android:layout_marginStart = "16dp"
-		android:background = "@drawable/shape_avatar_2"/>
-	<ImageView android:id = "@+id/online"
-		android:layout_width = "16dp"
-		android:layout_height = "16dp"
-		app:layout_constraintTop_toTopOf = "@+id/avatar"
-		app:layout_constraintStart_toStartOf = "@+id/avatar"
-		android:layout_marginTop = "26dp"
-		android:layout_marginStart = "26dp"
-		android:background = "@drawable/shape_avatar_badge"/>
+		android:background = "@drawable/ic_back"/>
 	<TextView android:id = "@+id/vacancy"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintStart_toEndOf = "@+id/avatar"
+		app:layout_constraintStart_toEndOf = "@+id/bars"
 		app:layout_constraintEnd_toStartOf = "@+id/list"
 		android:layout_marginTop = "8dp"
-		android:layout_marginHorizontal="16dp"
+		android:layout_marginStart = "16dp"
 		android:textStyle = "bold"
 		android:textColor = "@color/font_color"
 		android:text = "МЕНЕДЖЕР ПО ПРОДАЖАМ"/>
@@ -49,10 +33,11 @@
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
-		app:layout_constraintStart_toEndOf = "@+id/avatar"
+		app:layout_constraintStart_toEndOf = "@+id/bars"
 		app:layout_constraintEnd_toStartOf = "@+id/list"
 		android:layout_marginBottom = "8dp"
-		android:layout_marginHorizontal="16dp"
+		android:layout_marginHorizontal = "16dp"
+		android:layout_marginStart = "16dp"
 		android:textColor = "@color/font_color"
 		android:text = "ПРАЙД КОМПЬЮТЕРС"/>
 	<Button android:id = "@+id/list"
