--- a/app/src/main/res/layout/c_search_vacancy.xml
+++ b/app/src/main/res/layout/c_search_vacancy.xml
@@ -11,7 +11,8 @@
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_marginStart = "16dp"
-		android:layout_marginEnd = "16dp"/>
+		android:layout_marginEnd = "16dp"
+		android:inputType = "text"/>
 	<Button android:id = "@+id/search_work"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
