--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -12,8 +12,8 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintEnd_toStartOf = "@+id/button_02"
 		android:layout_marginEnd = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_user"/>
+		app:srcCompat = "@drawable/ic_user"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_02"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -21,8 +21,8 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintEnd_toStartOf = "@+id/button_03"
 		android:layout_marginEnd = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_phone"/>
+		app:srcCompat = "@drawable/ic_phone"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_03"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -30,16 +30,16 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintEnd_toStartOf = "@+id/button_04"
 		android:layout_marginEnd = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_vk"/>
+		app:srcCompat = "@drawable/ic_vk"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_04"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintStart_toStartOf = "@+id/bottom_09"
 		app:layout_constraintEnd_toEndOf = "@+id/bottom_10"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_ok"/>
+		app:srcCompat = "@drawable/ic_ok"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_05"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -47,8 +47,8 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintStart_toEndOf = "@+id/button_04"
 		android:layout_marginStart = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_instagram"/>
+		app:srcCompat = "@drawable/ic_instagram"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_06"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -56,8 +56,8 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintStart_toEndOf = "@+id/button_05"
 		android:layout_marginStart = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_telegram"/>
+		app:srcCompat = "@drawable/ic_telegram"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_07"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -65,8 +65,8 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintEnd_toStartOf = "@+id/bottom_08"
 		android:layout_marginEnd = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_gmail"/>
+		app:srcCompat = "@drawable/ic_gmail"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_08"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -74,8 +74,8 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintEnd_toStartOf = "@+id/bottom_09"
 		android:layout_marginEnd = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_facebook"/>
+		app:srcCompat = "@drawable/ic_facebook"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_09"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -85,8 +85,8 @@
 		android:layout_marginTop = "12dp"
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_mail_ru"/>
+		app:srcCompat = "@drawable/ic_mail_ru"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_10"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -94,8 +94,8 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintStart_toEndOf = "@+id/bottom_09"
 		android:layout_marginStart = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_discord"/>
+		app:srcCompat = "@drawable/ic_discord"
+		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_11"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
@@ -103,6 +103,6 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintStart_toEndOf = "@+id/bottom_10"
 		android:layout_marginStart = "12dp"
-		android:background = "@drawable/shape_button"
-		app:srcCompat = "@drawable/ic_microsoft"/>
+		app:srcCompat = "@drawable/ic_microsoft"
+		android:background = "@drawable/shape_button"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
