--- a/app/src/main/res/layout/e_chats_list.xml
+++ b/app/src/main/res/layout/e_chats_list.xml
@@ -31,4 +31,11 @@
 		app:layout_constraintTop_toBottomOf = "@+id/message_outgoing_2"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"/>
+	<include android:id = "@+id/include_02"
+		layout = "@layout/c_menu_bottom"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
