--- a/app/src/main/res/layout/e_chats_message.xml
+++ b/app/src/main/res/layout/e_chats_message.xml
@@ -16,8 +16,7 @@
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toBottomOf = "@+id/menu"
 		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-	/>
+		app:layout_constraintEnd_toEndOf = "parent"/>
 	<View android:id = "@+id/divider"
 		android:layout_width = "0dp"
 		android:layout_height = "1dp"
@@ -46,13 +45,28 @@
 		android:layout_marginStart = "48dp"
 		android:layout_marginEnd = "16dp"/>
 	<include android:id = "@+id/message_entry_field"
-		layout = "@layout/c_chats_message_entry_field_item"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
-		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintBottom_toTopOf = "@+id/include_02"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_marginBottom = "16dp"
 		android:layout_marginStart = "16dp"
-		android:layout_marginEnd = "16dp"/>
+		android:layout_marginEnd = "16dp"
+		layout = "@layout/c_chats_message_entry_field_item"/>
+	<ImageView android:id = "@+id/imageView2"
+		android:layout_width = "0dp"
+		android:layout_height = "0dp"
+		app:layout_constraintTop_toTopOf = "@+id/message_outgoing"
+		app:layout_constraintBottom_toBottomOf = "@+id/message_outgoing"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		app:srcCompat = "@color/theme_1_color_1_50"/>
+	<include android:id = "@+id/include_02"
+		layout = "@layout/c_menu_bottom"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
