--- a/app/src/main/res/layout/e_menu_left.xml
+++ b/app/src/main/res/layout/e_menu_left.xml
@@ -5,15 +5,7 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
-	<ImageView android:id = "@+id/background"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		app:srcCompat = "@color/black"
-		android:alpha = "0.5"/>
+
 	<com.google.android.material.navigation.NavigationView android:id = "@+id/navigation_view"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
@@ -23,7 +15,7 @@
 		android:layout_marginEnd = "64dp">
 		<com.google.android.material.tabs.TabLayout android:id = "@+id/tab_layout"
 			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
+			android:layout_height = "60dp"
 			style = "@style/menu_left_tab_layout">
 			<com.google.android.material.tabs.TabItem android:id = "@+id/tab_item_1"
 				android:layout_width = "wrap_content"
@@ -35,4 +27,27 @@
 				android:text = "Работодатель"/>
 		</com.google.android.material.tabs.TabLayout>
 	</com.google.android.material.navigation.NavigationView>
+	<include android:id = "@+id/include_01"
+		layout = "@layout/c_menu_top"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"/>
+	<include android:id = "@+id/include_02"
+		layout = "@layout/c_menu_bottom"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"/>
+	<ImageView android:id = "@+id/background"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		app:srcCompat = "@color/black"
+		android:alpha = "0.5"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
