--- a/app/src/main/res/layout/e_menu_right.xml
+++ b/app/src/main/res/layout/e_menu_right.xml
@@ -5,15 +5,7 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
-	<ImageView android:id = "@+id/background"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		app:srcCompat = "@color/black"
-		android:alpha = "0.5"/>
+
 	<com.google.android.material.navigation.NavigationView android:id = "@+id/navigation_view"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
@@ -25,4 +17,27 @@
 			android:layout_width = "match_parent"
 			android:layout_height = "match_parent"></ExpandableListView>
 	</com.google.android.material.navigation.NavigationView>
+	<include android:id = "@+id/include_01"
+		layout = "@layout/c_menu_top"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"/>
+	<include android:id = "@+id/include_02"
+		layout = "@layout/c_menu_bottom"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"/>
+	<ImageView android:id = "@+id/background"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		app:srcCompat = "@color/black"
+		android:alpha = "0.5"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
