--- a/app/src/main/res/layout/e_chats_message.xml
+++ b/app/src/main/res/layout/e_chats_message.xml
@@ -54,7 +54,7 @@
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"
 		layout = "@layout/c_chats_message_entry_field_item"/>
-	<ImageView android:id = "@+id/imageView2"
+	<ImageView android:id = "@+id/selected"
 		android:layout_width = "0dp"
 		android:layout_height = "0dp"
 		app:layout_constraintTop_toTopOf = "@+id/message_outgoing"
