--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,7 +19,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/include_01"/>
+                android:id="@+id/include_01"
+        />
         <include
                 layout="@layout/c_menu_bottom"
                 android:layout_width="match_parent"
@@ -41,24 +42,13 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintVertical_bias="0.022"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/constraint_layout_recycler_view"
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_cards"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="60dp"
+                android:layout_height="0dp"
                 android:scrollbars="vertical"
                 app:layout_constraintTop_toBottomOf="@+id/include_01"
-                app:layout_constraintBottom_toTopOf="@+id/include_02">
-
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintBottom_toTopOf="@+id/include_02"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_layout_fake"
