Подсказка в поле ввода

--- a/app/src/main/res/layout/menu_top.xml
+++ b/app/src/main/res/layout/menu_top.xml
@@ -28,6 +28,7 @@
             android:background="@color/white"
             android:completionThreshold="1"
             android:singleLine="true"
+            android:hint="@string/search_view_hint"
     />
     <Button
             android:id="@+id/bars"
