--- a/app/src/main/res/menu/bottom_profile_not_logged_in.xml
+++ b/app/src/main/res/menu/bottom_profile_not_logged_in.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/bottom_01"
+            android:id="@+id/auth_bottom_not_logged"
             android:title="@string/menu_bottom_profile_not_logged_in_1"
     />
     <item
-            android:id="@+id/bottom_02"
+            android:id="@+id/reg_bottom_not_logged"
             android:title="@string/menu_bottom_profile_not_logged_in_2"
     />
     <item
-            android:id="@+id/bottom_03"
+            android:id="@+id/rec_pass_bottom_not_logged"
             android:title="@string/menu_bottom_profile_not_logged_in_3"
     />
 </menu>
