--- a/app/src/main/res/layout/c_menu_bottom.xml
+++ b/app/src/main/res/layout/c_menu_bottom.xml
@@ -7,7 +7,7 @@
 	tools:context = ".MainActivity">
 	<com.google.android.material.bottomnavigation.BottomNavigationView android:id = "@+id/menu_bottom"
 		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
+		android:layout_height = "60dp"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
