--- a/app/src/main/res/layout/c_menu_top_notifications.xml
+++ b/app/src/main/res/layout/c_menu_top_notifications.xml
@@ -5,7 +5,7 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
-	<androidx.appcompat.widget.Toolbar android:id = "@+id/toolbar"
+	<TextView android:id = "@+id/toolbar"
 		android:layout_width = "match_parent"
 		android:layout_height = "60dp"
 		app:layout_constraintTop_toTopOf = "parent"
@@ -16,14 +16,17 @@
 		app:layout_constraintTop_toTopOf = "@+id/toolbar"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
 		app:layout_constraintStart_toStartOf = "@+id/toolbar"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/ic_bars"/>
-	<Button android:id = "@+id/list"
-		android:layout_width = "32dp"
-		android:layout_height = "32dp"
+		android:layout_marginStart = "16dp"
+		android:background = "@drawable/ic_back"/>
+	<TextView android:id = "@+id/headline"
+		android:layout_width = "0dp"
+		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "@+id/toolbar"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
-		app:layout_constraintEnd_toEndOf = "@+id/toolbar"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/ic_list"/>
+		app:layout_constraintStart_toEndOf = "@+id/bars"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_marginStart = "16dp"
+		android:layout_marginEnd = "16dp"
+		style = "@style/text_color_and_size"
+		android:text = "@string/notifications"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
