--- a/app/src/main/res/layout/c_search_loading_icon.xml
+++ b/app/src/main/res/layout/c_search_loading_icon.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-    <ProgressBar
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:id="@+id/search_progress_bar"
-            android:layout_marginTop="52dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="76dp"
-    />
-</RelativeLayout>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	android:layout_width = "match_parent"
+	android:layout_height = "match_parent">
+	<ProgressBar android:id = "@+id/search_progress_bar"
+		android:layout_width = "32dp"
+		android:layout_height = "32dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		android:layout_alignParentStart = "true"
+	/>
+</androidx.constraintlayout.widget.ConstraintLayout>
