--- a/app/src/main/res/layout/e_main.xml
+++ b/app/src/main/res/layout/e_main.xml
@@ -3,20 +3,27 @@
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent">
-	<TextView android:id = "@+id/item"
+	<include android:id = "@+id/include_01"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
-		style = "@style/text_color_and_size"
-		android:text = "@string/search_item"
-		android:padding = "16dp"/>
-	<View android:id = "@+id/divider"
+		layout = "@layout/c_menu_top"/>
+	<include android:id = "@+id/include_02"
 		android:layout_width = "match_parent"
-		android:layout_height = "1dp"
-		app:layout_constraintTop_toBottomOf = "@+id/item"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/include_01"
+		app:layout_constraintBottom_toTopOf = "@+id/include_03"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
-		android:background = "@color/theme_1_hover"/>
+		android:layout_marginHorizontal = "16dp"
+		layout = "@layout/c_search"/>
+	<include android:id = "@+id/include_03"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		layout = "@layout/c_menu_bottom"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
