--- a/app/src/main/res/layout/e_menu_left.xml
+++ b/app/src/main/res/layout/e_menu_left.xml
@@ -5,7 +5,6 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
-
 	<com.google.android.material.navigation.NavigationView android:id = "@+id/navigation_view"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
@@ -28,19 +27,19 @@
 		</com.google.android.material.tabs.TabLayout>
 	</com.google.android.material.navigation.NavigationView>
 	<include android:id = "@+id/include_01"
-		layout = "@layout/c_menu_top"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"/>
+		app:layout_constraintEnd_toEndOf = "parent"
+		layout = "@layout/c_menu_top_search"/>
 	<include android:id = "@+id/include_02"
-		layout = "@layout/c_menu_bottom"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"/>
+		app:layout_constraintEnd_toEndOf = "parent"
+		layout = "@layout/c_menu_bottom"/>
 	<ImageView android:id = "@+id/background"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
