--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -8,7 +8,7 @@
     <include
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            layout="@layout/c_search_vacancy"
+            layout="@layout/c_search"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
