--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
 	<style name = "appTheme"
 		parent = "Theme.AppCompat.Light.DarkActionBar">
 		<!-- Customize your theme here. -->
-		<item name = "colorPrimary">@color/colorPrimary</item>
-		<item name = "colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name = "colorAccent">@color/colorAccent</item>
+		<item name = "colorPrimary">@color/theme_1_color_1</item>
+		<item name = "colorPrimaryDark">@color/theme_1_color_2</item>
+		<item name = "colorAccent">@color/font_color</item>
 	</style>
 	<style name = "appTheme.NoActionBar"
 		parent = "Theme.AppCompat.Light.NoActionBar">
