--- a/app/src/main/res/layout/c_search.xml
+++ b/app/src/main/res/layout/c_search.xml
@@ -25,7 +25,7 @@
 			android:layout_height = "wrap_content"
 			android:text = "@string/search_tab_candidate"/>
 	</com.google.android.material.tabs.TabLayout>
-	<androidx.appcompat.widget.SearchView android:id = "@+id/search_welcome"
+	<SearchView android:id = "@+id/search_welcome"
 		android:layout_width = "0dp"
 		android:layout_height = "50dp"
 		app:layout_constraintTop_toTopOf = "parent"
