--- a/app/src/main/res/layout/fragment_profile_bottom_dialog.xml
+++ b/app/src/main/res/layout/fragment_profile_bottom_dialog.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingBottom="@dimen/list_item_spacing_half"
         android:paddingTop="@dimen/list_item_spacing_half"
-        tools:context=".fragments.ProfileBottomDialogFragment"
-        tools:listitem="@layout/fragment_profile_bottom_dialog_item"/>
+        tools:listitem="@layout/fragment_profile_bottom_dialog_item"
+        android:background="@color/white">
+</androidx.recyclerview.widget.RecyclerView>
