--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,6 +14,7 @@
 
 	<androidx.recyclerview.widget.RecyclerView
 		android:id = "@+id/rv_cards"
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 		android:layout_width = "match_parent"
 		android:layout_height = "0dp"
 		app:layout_constraintTop_toBottomOf = "@+id/toolbar"
