--- a/app/src/main/res/layout/reg_recycler_item.xml
+++ b/app/src/main/res/layout/reg_recycler_item.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-	android:id="@+id/container_reg_rv_item"
+<LinearLayout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"/>
+	android:layout_height = "wrap_content"
+	android:orientation = "vertical"
+	>
+
+	<TextView
+		android:id = "@+id/tv_header_reg"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		android:layout_margin = "16dp"
+		android:background = "@drawable/shape_button"
+		android:textColor = "@color/black"
+		android:textSize = "18sp"
+		/>
+
+	<FrameLayout
+		android:id = "@+id/container_reg_rv_item"
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		/>
+</LinearLayout>
