Переход переделан под обычную кнопку Убрать фокус с поиска при возврате

--- a/app/src/main/res/layout/c_menu_top.xml
+++ b/app/src/main/res/layout/c_menu_top.xml
@@ -6,6 +6,7 @@
 	android:layout_height = "wrap_content"
 	android:visibility="gone"
 	android:id="@+id/constraint_layout_menu_top"
+	android:focusableInTouchMode="true"
 	>
 
 	<androidx.appcompat.widget.Toolbar
