--- a/app/src/main/res/layout/c_search.xml
+++ b/app/src/main/res/layout/c_search.xml
@@ -42,18 +42,20 @@
 			/>
 	</com.google.android.material.tabs.TabLayout>
 
-	<ImageButton
-		android:id = "@+id/search_welcome"
-		android:layout_width = "0dp"
-		android:layout_height = "50dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_marginStart = "16dp"
-		android:layout_marginEnd = "16dp"
-		android:src = "@drawable/search_image_button"
-		/>
+	<Button
+			android:id="@+id/search_welcome"
+			android:layout_width="0dp"
+			android:layout_height="50dp"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:text="@string/search_view_hint"
+			android:drawableStart="@android:drawable/ic_menu_search"
+			android:textSize="16sp"
+			android:padding="16dp"
+			android:textColor = "@color/font_color"
+			android:background = "@color/theme_1_hover"/>
 
 	<Button
 		android:id = "@+id/search_button_welcome"
