--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -38,8 +38,8 @@
                 app:layout_constraintTop_toTopOf="@+id/rv_cards"
                 android:background="@color/white"
                 tools:layout_editor_absoluteX="0dp"
-                android:visibility="@{viewmodel.isSearchListViewVisible()? View.VISIBLE : View.INVISIBLE}"
-                android:onItemSelected="@{(parent, viewClick, position, id) -> viewmodel.onSuggestionsListItemClick(position)}"
+                android:visibility="@{viewmodel.isSearchListViewVisible() ? View.VISIBLE : View.GONE}"
+                app:onItemClickListener="@{(parent, viewClick, position, id) -> viewmodel.onSuggestionsListItemClick(position)}"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
