--- a/app/src/main/res/layout/c_chats_message_incoming_item.xml
+++ b/app/src/main/res/layout/c_chats_message_incoming_item.xml
@@ -30,7 +30,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/message_forwarded"
 		app:layout_constraintStart_toStartOf = "parent"
 		android:layout_marginStart = "16dp"
-		app:srcCompat = "@drawable/ic_forward_right"/>
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_forward_right"/>
 	<TextView android:id = "@+id/message_forwarded"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
