--- a/app/src/main/res/layout/c_card_hr.xml
+++ b/app/src/main/res/layout/c_card_hr.xml
@@ -8,7 +8,7 @@
 	<ImageView android:id = "@+id/background"
 		android:layout_width = "match_parent"
 		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
@@ -20,7 +20,7 @@
 		app:layout_constraintTop_toTopOf = "@id/background"
 		app:layout_constraintStart_toStartOf = "@id/background"
 		app:layout_constraintEnd_toEndOf = "@id/background"
-		tools:srcCompat = "@color/theme_1_color_1"/>
+		android:contentDescription="TODO" tools:srcCompat = "@color/theme_1_color_1"/>
 	<TextView android:id = "@+id/surname"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
