--- a/app/src/main/res/layout/c_card_vacancy_close_map_open.xml
+++ b/app/src/main/res/layout/c_card_vacancy_close_map_open.xml
@@ -12,7 +12,7 @@
 			<ImageView android:id = "@+id/background"
 				android:layout_width = "match_parent"
 				android:layout_height = "0dp"
-				app:layout_constraintTop_toTopOf = "parent"
+				app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 				app:layout_constraintBottom_toBottomOf = "@+id/menu"
 				app:layout_constraintStart_toStartOf = "parent"
 				app:layout_constraintEnd_toEndOf = "parent"
@@ -38,7 +38,7 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/name"
 				app:layout_constraintStart_toEndOf = "@+id/name"
 				android:layout_marginStart = "8dp"
-				app:srcCompat = "@drawable/ic_eye"/>
+				android:contentDescription="TODO" app:srcCompat = "@drawable/ic_eye"/>
 			<TextView android:id = "@+id/newbie"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
@@ -298,7 +298,7 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/company_name"
 				app:layout_constraintStart_toEndOf = "@+id/company_name"
 				android:layout_marginStart = "8dp"
-				app:srcCompat = "@drawable/ic_online"/>
+				android:contentDescription="TODO" app:srcCompat = "@drawable/ic_online"/>
 			<TextView android:id = "@+id/distance"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
@@ -318,7 +318,7 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/company_name"
 				app:layout_constraintEnd_toEndOf = "@+id/background"
 				android:layout_marginEnd = "16dp"
-				app:srcCompat = "@drawable/ic_map_pin"/>
+				android:contentDescription="TODO" app:srcCompat = "@drawable/ic_map_pin"/>
 			<com.google.android.gms.maps.MapView android:id = "@+id/mapView"
 				android:layout_width = "0dp"
 				android:layout_height = "250dp"
