--- a/app/src/main/res/layout/c_card_vacancy_open.xml
+++ b/app/src/main/res/layout/c_card_vacancy_open.xml
@@ -16,7 +16,7 @@
 			<ImageView android:id = "@+id/background"
 				android:layout_width = "match_parent"
 				android:layout_height = "0dp"
-				app:layout_constraintTop_toTopOf = "parent"
+				app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 				app:layout_constraintBottom_toBottomOf = "@+id/menu"
 				app:layout_constraintStart_toStartOf = "parent"
 				app:layout_constraintEnd_toEndOf = "parent"
@@ -42,7 +42,7 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/name"
 				app:layout_constraintStart_toEndOf = "@+id/name"
 				android:layout_marginStart = "8dp"
-				app:srcCompat = "@drawable/ic_eye"/>
+				android:contentDescription="TODO" app:srcCompat = "@drawable/ic_eye"/>
 			<TextView android:id = "@+id/newbie"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
@@ -293,7 +293,7 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/company_name"
 				app:layout_constraintStart_toEndOf = "@+id/company_name"
 				android:layout_marginStart = "8dp"
-				app:srcCompat = "@drawable/ic_online"/>
+				android:contentDescription="TODO" app:srcCompat = "@drawable/ic_online"/>
 			<TextView android:id = "@+id/distance"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
@@ -313,7 +313,7 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/company_name"
 				app:layout_constraintEnd_toEndOf = "@+id/background"
 				android:layout_marginEnd = "16dp"
-				app:srcCompat = "@drawable/ic_map_pin"/>
+				android:contentDescription="TODO" app:srcCompat = "@drawable/ic_map_pin"/>
 			<com.google.android.gms.maps.MapView android:id = "@+id/mapView"
 				android:visibility = "gone"
 				android:layout_width = "0dp"
