--- a/app/src/main/res/layout/c_chats_candidate_list_item.xml
+++ b/app/src/main/res/layout/c_chats_candidate_list_item.xml
@@ -6,7 +6,7 @@
 	<ImageView android:id = "@+id/avatar"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 		app:layout_constraintStart_toStartOf = "parent"
 		android:layout_marginTop = "16dp"
 		android:layout_marginStart = "16dp"
@@ -14,7 +14,7 @@
 	<ImageView android:id = "@+id/online"
 		android:layout_width = "16dp"
 		android:layout_height = "16dp"
-		app:layout_constraintTop_toTopOf = "@+id/avatar"
+		app:layout_constraintTop_toTopOf = "@+id/avatar" android:contentDescription="TODO" 
 		app:layout_constraintStart_toStartOf = "@+id/avatar"
 		android:layout_marginTop = "32dp"
 		android:layout_marginStart = "32dp"
