--- a/app/src/main/res/layout/c_chats_message_outgoing_item.xml
+++ b/app/src/main/res/layout/c_chats_message_outgoing_item.xml
@@ -30,7 +30,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/message_forwarded"
 		app:layout_constraintStart_toStartOf = "parent"
 		android:layout_marginStart = "16dp"
-		app:srcCompat = "@drawable/ic_forward_right"/>
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_forward_right"/>
 	<TextView android:id = "@+id/message_forwarded"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -70,7 +70,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/time"
 		app:layout_constraintEnd_toStartOf = "@+id/delivered_to_server"
 		android:layout_marginEnd = "16dp"
-		app:srcCompat = "@drawable/ic_clock"/>
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_clock"/>
 	<ImageView android:id = "@+id/delivered_to_server"
 		android:layout_width = "16dp"
 		android:layout_height = "16dp"
@@ -78,7 +78,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/time"
 		app:layout_constraintEnd_toStartOf = "@+id/delivered_to_the_recipient"
 		android:layout_marginEnd = "16dp"
-		app:srcCompat = "@drawable/ic_check"/>
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_check"/>
 	<ImageView android:id = "@+id/delivered_to_the_recipient"
 		android:layout_width = "16dp"
 		android:layout_height = "16dp"
@@ -86,7 +86,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/time"
 		app:layout_constraintEnd_toStartOf = "@+id/read_by_recipient"
 		android:layout_marginEnd = "16dp"
-		app:srcCompat = "@drawable/ic_check_double"/>
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_check_double"/>
 	<ImageView android:id = "@+id/read_by_recipient"
 		android:layout_width = "16dp"
 		android:layout_height = "16dp"
@@ -95,5 +95,5 @@
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_marginEnd = "16dp"
 		app:srcCompat = "@drawable/ic_check_double"
-		android:tint = "@color/message_read"/>
+		android:contentDescription="TODO" android:tint = "@color/message_read"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
