--- a/app/src/main/res/layout/c_menu_headline_chats_message_item.xml
+++ b/app/src/main/res/layout/c_menu_headline_chats_message_item.xml
@@ -7,7 +7,7 @@
 	<ImageView android:id = "@+id/avatar"
 		android:layout_width = "40dp"
 		android:layout_height = "40dp"
-		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		android:layout_marginVertical = "8dp"
@@ -16,7 +16,7 @@
 	<ImageView android:id = "@+id/online"
 		android:layout_width = "16dp"
 		android:layout_height = "16dp"
-		app:layout_constraintTop_toTopOf = "@+id/avatar"
+		app:layout_constraintTop_toTopOf = "@+id/avatar" android:contentDescription="TODO" 
 		app:layout_constraintStart_toStartOf = "@+id/avatar"
 		android:layout_marginTop = "26dp"
 		android:layout_marginStart = "26dp"
