--- a/app/src/main/res/layout/c_registration_01_phone.xml
+++ b/app/src/main/res/layout/c_registration_01_phone.xml
@@ -8,7 +8,7 @@
 	<ImageView android:id = "@+id/background"
 		android:layout_width = "match_parent"
 		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
