--- a/app/src/main/res/layout/c_registration_02.xml
+++ b/app/src/main/res/layout/c_registration_02.xml
@@ -8,7 +8,7 @@
 	<ImageView android:id = "@+id/background"
 		android:layout_width = "match_parent"
 		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
@@ -21,7 +21,7 @@
 		app:layout_constraintStart_toStartOf = "@+id/background"
 		app:layout_constraintEnd_toEndOf = "@+id/background"
 		android:layout_marginTop = "16dp"
-		app:srcCompat = "@drawable/ic_user"/>
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_user"/>
 	<EditText android:id = "@+id/surname"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
