--- a/app/src/main/res/layout/c_registration_03.xml
+++ b/app/src/main/res/layout/c_registration_03.xml
@@ -8,7 +8,7 @@
 	<ImageView android:id = "@+id/background"
 		android:layout_width = "match_parent"
 		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
@@ -34,7 +34,7 @@
 		app:layout_constraintEnd_toEndOf = "@+id/background"
 		android:layout_marginTop = "16dp"
 		app:backgroundTint = "@color/theme_1_color_1"
-		app:srcCompat = "@drawable/ic_plus"
+		android:focusable="true" app:srcCompat = "@drawable/ic_plus"
 		android:clickable = "true"/>
 	<Button android:id = "@+id/registration"
 			android:layout_width = "wrap_content"
