--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -12,7 +12,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintEnd_toStartOf = "@+id/button_02"
 		android:layout_marginEnd = "12dp"
-		app:srcCompat = "@drawable/ic_user"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_user"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_02"
 		android:layout_width = "48dp"
@@ -21,7 +21,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintEnd_toStartOf = "@+id/button_03"
 		android:layout_marginEnd = "12dp"
-		app:srcCompat = "@drawable/ic_phone"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_phone"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_03"
 		android:layout_width = "48dp"
@@ -30,7 +30,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintEnd_toStartOf = "@+id/button_04"
 		android:layout_marginEnd = "12dp"
-		app:srcCompat = "@drawable/ic_vk"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_vk"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_04"
 		android:layout_width = "48dp"
@@ -38,7 +38,7 @@
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintStart_toStartOf = "@+id/bottom_09"
 		app:layout_constraintEnd_toEndOf = "@+id/bottom_10"
-		app:srcCompat = "@drawable/ic_ok"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_ok"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_05"
 		android:layout_width = "48dp"
@@ -47,7 +47,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintStart_toEndOf = "@+id/button_04"
 		android:layout_marginStart = "12dp"
-		app:srcCompat = "@drawable/ic_instagram"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_instagram"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/button_06"
 		android:layout_width = "48dp"
@@ -56,7 +56,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
 		app:layout_constraintStart_toEndOf = "@+id/button_05"
 		android:layout_marginStart = "12dp"
-		app:srcCompat = "@drawable/ic_telegram"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_telegram"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_07"
 		android:layout_width = "48dp"
@@ -65,7 +65,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintEnd_toStartOf = "@+id/bottom_08"
 		android:layout_marginEnd = "12dp"
-		app:srcCompat = "@drawable/ic_gmail"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_gmail"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_08"
 		android:layout_width = "48dp"
@@ -74,7 +74,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintEnd_toStartOf = "@+id/bottom_09"
 		android:layout_marginEnd = "12dp"
-		app:srcCompat = "@drawable/ic_facebook"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_facebook"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_09"
 		android:layout_width = "48dp"
@@ -85,7 +85,7 @@
 		android:layout_marginTop = "12dp"
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"
-		app:srcCompat = "@drawable/ic_mail_ru"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_mail_ru"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_10"
 		android:layout_width = "48dp"
@@ -94,7 +94,7 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintStart_toEndOf = "@+id/bottom_09"
 		android:layout_marginStart = "12dp"
-		app:srcCompat = "@drawable/ic_discord"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_discord"
 		android:background = "@drawable/shape_button"/>
 	<ImageButton android:id = "@+id/bottom_11"
 		android:layout_width = "48dp"
@@ -103,6 +103,6 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
 		app:layout_constraintStart_toEndOf = "@+id/bottom_10"
 		android:layout_marginStart = "12dp"
-		app:srcCompat = "@drawable/ic_microsoft"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_microsoft"
 		android:background = "@drawable/shape_button"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
