--- a/app/src/main/res/layout/e_splash_screen.xml
+++ b/app/src/main/res/layout/e_splash_screen.xml
@@ -14,7 +14,7 @@
 		android:layout_marginBottom = "16dp"
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"
-		app:srcCompat = "@drawable/ic_symbol"
+		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_symbol"
 		app:layout_constraintVertical_bias = "0.30"/>
 	<TextView android:id = "@+id/the_best_work"
 		android:layout_width = "wrap_content"
