--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,20 @@
 <resources>
 	<!-- Base application theme. -->
-	<style name = "appTheme"
+	<style name = "AppTheme"
 		parent = "Theme.AppCompat.Light.NoActionBar">
 		<!-- Customize your theme here. -->
 		<item name = "colorPrimary">@color/theme_1_color_1</item>
 		<item name = "colorPrimaryDark">@color/theme_1_color_2</item>
 		<item name = "colorAccent">@color/font_color</item>
 	</style>
+	<style name="AppTheme.NoActionBar">
+		<item name="windowActionBar">false</item>
+		<item name="windowNoTitle">true</item>
+	</style>
+	<style name="AppTheme.AppBarOverlay"
+		   parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+	<style name="AppTheme.PopupOverlay"
+		   parent="ThemeOverlay.AppCompat.Light"/>
 	<style name = "menu_left_tab_layout"
 		parent = "Base.Widget.Design.TabLayout">
 		<item name = "tabTextAppearance">@style/menu_left_tab_layout_text</item>
