--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,88 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout
+        xmlns:tools = "http://schemas.android.com/tools">
 
-	<data>
+    <data>
 
-		<variable
-			name = "viewmodel"
-			type = "ru.jobni.jobni.viewmodel.MainViewModel"
-			/>
+        <variable
+                name = "viewmodel"
+                type = "ru.jobni.jobni.viewmodel.MainViewModel"
+        />
 
-		<import type = "androidx.drawerlayout.widget.DrawerLayout"/>
+        <import type = "androidx.drawerlayout.widget.DrawerLayout"/>
 
-		<import type = "androidx.core.view.GravityCompat"/>
+        <import type = "androidx.core.view.GravityCompat"/>
 
-        <import type="android.view.View" />
-	</data>
+        <import type = "android.view.View"/>
+    </data>
 
-	<androidx.drawerlayout.widget.DrawerLayout
-		xmlns:android = "http://schemas.android.com/apk/res/android"
-		xmlns:app = "http://schemas.android.com/apk/res-auto"
-		xmlns:tools = "http://schemas.android.com/tools"
-		xmlns:bind="http://schemas.android.com/apk/res-auto"
-		android:id = "@+id/drawer_layout"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		app:setDrawerLockMode = "@{DrawerLayout.LOCK_MODE_LOCKED_CLOSED}"
+    <androidx.drawerlayout.widget.DrawerLayout
+            xmlns:android = "http://schemas.android.com/apk/res/android"
+            xmlns:app = "http://schemas.android.com/apk/res-auto"
+            android:id = "@+id/drawer_layout"
+            android:layout_width = "match_parent"
+            android:layout_height = "match_parent"
+            app:setDrawerLockMode = "@{DrawerLayout.LOCK_MODE_LOCKED_CLOSED}"
+            tools:openDrawer = "start"
+    >
 
-		>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                xmlns:android = "http://schemas.android.com/apk/res/android"
+                xmlns:app = "http://schemas.android.com/apk/res-auto"
+                android:layout_width = "match_parent"
+                android:layout_height = "match_parent"
+        >
 
-		<androidx.constraintlayout.widget.ConstraintLayout
-			xmlns:android = "http://schemas.android.com/apk/res/android"
-			xmlns:app = "http://schemas.android.com/apk/res-auto"
-			xmlns:tools = "http://schemas.android.com/tools"
-			android:layout_width = "match_parent"
-			android:layout_height = "match_parent"
-			>
-
-			<FrameLayout
-				android:id = "@+id/fragment_container"
-				android:layout_width = "0dp"
-				android:layout_height = "0dp"
-				app:layout_constraintTop_toTopOf = "parent"
-				app:layout_constraintBottom_toTopOf = "@+id/menu_bottom"
-				app:layout_constraintStart_toStartOf = "parent"
-				app:layout_constraintEnd_toEndOf = "parent"
-				/>
+            <FrameLayout
+                    android:id = "@+id/fragment_container"
+                    android:layout_width = "0dp"
+                    android:layout_height = "0dp"
+                    app:layout_constraintTop_toTopOf = "parent"
+                    app:layout_constraintBottom_toTopOf = "@+id/menu_bottom"
+                    app:layout_constraintStart_toStartOf = "parent"
+                    app:layout_constraintEnd_toEndOf = "parent"
+            />
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:id="@+id/menu_bottom"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:id = "@+id/menu_bottom"
+                    android:visibility = "gone"
+                    android:layout_width = "0dp"
+                    android:layout_height = "wrap_content"
                     app:layout_constraintTop_toBottomOf = "@+id/fragment_container"
                     app:layout_constraintBottom_toBottomOf = "parent"
                     app:layout_constraintStart_toStartOf = "parent"
                     app:layout_constraintEnd_toEndOf = "parent"
-                    android:background="@color/theme_1_color_1"
-                    app:menu="@menu/bottom"
-                    app:itemIconTint="@drawable/selector_menu"
-                    app:itemTextColor="@drawable/selector_menu"
-                    app:labelVisibilityMode="labeled"
-                    android:visibility="gone"
-
+                    android:background = "@color/theme_1_color_1"
+                    app:itemIconTint = "@drawable/selector_menu"
+                    app:itemTextColor = "@drawable/selector_menu"
+                    app:labelVisibilityMode = "labeled"
+                    app:menu = "@menu/bottom"
             />
-		</androidx.constraintlayout.widget.ConstraintLayout>
-		<!--The navigation drawer -->
-		<com.google.android.material.navigation.NavigationView
-			android:id = "@+id/navigation_view"
-			android:layout_width = "320dp"
-			android:layout_height = "match_parent"
-			app:layout_constraintTop_toTopOf = "parent"
-			app:layout_constraintBottom_toBottomOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			android:layout_marginStart = "64dp"
-			android:layout_gravity = "end"
-			>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-			<include
-				layout = "@layout/menu_right"
-                android:id="@+id/exp_list_include"
-				android:layout_width = "match_parent"
-				android:layout_height = "match_parent"
-				/>
-		</com.google.android.material.navigation.NavigationView>
-	</androidx.drawerlayout.widget.DrawerLayout>
+        <com.google.android.material.navigation.NavigationView
+                android:id = "@+id/navigation_view_right"
+                android:layout_width = "320dp"
+                android:layout_height = "match_parent"
+                app:layout_constraintTop_toTopOf = "parent"
+                app:layout_constraintBottom_toBottomOf = "parent"
+                app:layout_constraintStart_toStartOf = "parent"
+                android:layout_marginStart = "64dp"
+                android:layout_gravity = "end"
+        >
+
+            <include
+                    android:id = "@+id/exp_list_include"
+                    layout = "@layout/menu_right"
+                    android:layout_width = "match_parent"
+                    android:layout_height = "match_parent"
+            />
+        </com.google.android.material.navigation.NavigationView>
+
+        <com.google.android.material.navigation.NavigationView
+                android:id = "@+id/navigation_view_left"
+                android:layout_width = "wrap_content"
+                android:layout_height = "match_parent"
+                android:layout_gravity = "start"
+                android:fitsSystemWindows = "true"
+        >
+
+            <include layout = "@layout/nav_header_left"/>
+        </com.google.android.material.navigation.NavigationView>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
-
-<!--app:onNavigationItemSelected="@{viewmodel::onNavigationClick}" для bottomnavigation
-app:openDrawer="@{GravityCompat.END}" для правого меню-->
