--- a/app/src/main/res/layout/c_authorization.xml
+++ b/app/src/main/res/layout/c_authorization.xml
@@ -18,7 +18,6 @@
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_margin = "16dp"
 		android:background = "@drawable/shape_card"
-		android:contentDescription = "TODO"
 		/>
 
 	<include
@@ -32,42 +31,16 @@
 		android:layout_marginTop = "16dp"
 		/>
 
-	<EditText
-		android:id = "@+id/mail"
-		android:layout_width = "0dp"
+	<Button
+		android:id = "@+id/btn_auth_info"
+		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
 		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@id/background"
-		android:layout_marginTop = "16dp"
-		android:layout_marginHorizontal = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "textEmailAddress"
-		android:hint = "@string/mail_1"
-		/>
-
-	<EditText
-		android:id = "@+id/password_1"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/mail"
-		app:layout_constraintStart_toStartOf = "@+id/mail"
-		app:layout_constraintEnd_toEndOf = "@+id/mail"
-		android:layout_marginTop = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "textPassword|numberPassword"
-		android:hint = "@string/password_1"
-		/>
-
-	<Button
-		android:id = "@+id/enter"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/password_1"
-		app:layout_constraintStart_toStartOf = "@+id/background"
 		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"
+		android:layout_marginTop = "60dp"
 		android:background = "@drawable/shape_button"
-		android:text = "@string/enter"
+		android:text = "@string/btn_auth_info_text"
+		android:clickable = "false"
 		/>
 </androidx.constraintlayout.widget.ConstraintLayout>
