--- a/app/src/main/res/layout/c_intro_01.xml
+++ b/app/src/main/res/layout/c_intro_01.xml
@@ -36,12 +36,12 @@
 	<ImageView android:id = "@+id/site"
 		android:layout_width = "32dp"
 		android:layout_height = "32dp"
-		app:layout_constraintTop_toTopOf = "@+id/bottom_10"
-		app:layout_constraintBottom_toBottomOf = "@+id/bottom_10"
-		app:layout_constraintEnd_toStartOf = "@+id/bottom_10"
+		app:layout_constraintTop_toTopOf = "@+id/btn_discord"
+		app:layout_constraintBottom_toBottomOf = "@+id/btn_discord"
+		app:layout_constraintEnd_toStartOf = "@+id/btn_discord"
 		android:layout_marginEnd = "16dp"
 		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_site"/>
-	<ImageView android:id = "@+id/bottom_10"
+	<ImageView android:id = "@+id/btn_discord"
 		android:layout_width = "32dp"
 		android:layout_height = "32dp"
 		app:layout_constraintTop_toBottomOf = "@+id/activity_intro_1_2"
@@ -52,9 +52,9 @@
 	<ImageView android:id = "@+id/bottom_03"
 		android:layout_width = "32dp"
 		android:layout_height = "32dp"
-		app:layout_constraintTop_toTopOf = "@+id/bottom_10"
-		app:layout_constraintBottom_toBottomOf = "@+id/bottom_10"
-		app:layout_constraintStart_toEndOf = "@+id/bottom_10"
+		app:layout_constraintTop_toTopOf = "@+id/btn_discord"
+		app:layout_constraintBottom_toBottomOf = "@+id/btn_discord"
+		app:layout_constraintStart_toEndOf = "@+id/btn_discord"
 		android:layout_marginStart = "16dp"
 		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_vk"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
