--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -1,108 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "wrap_content"
 	android:layout_height = "wrap_content"
-	tools:context = ".MainActivity">
-	<ImageButton android:id = "@+id/button_01"
+	>
+
+	<ImageButton
+		android:id = "@+id/btn_user"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/button_04"
-		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
-		app:layout_constraintEnd_toStartOf = "@+id/button_02"
+		app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
+		app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
+		app:layout_constraintEnd_toStartOf = "@+id/btn_phone"
 		android:layout_marginEnd = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_user"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/button_02"
+		app:srcCompat = "@drawable/ic_user"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_phone"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/button_04"
-		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
-		app:layout_constraintEnd_toStartOf = "@+id/button_03"
+		app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
+		app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
+		app:layout_constraintEnd_toStartOf = "@+id/btn_vk"
 		android:layout_marginEnd = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_phone"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/button_03"
+		app:srcCompat = "@drawable/ic_phone"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_vk"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/button_04"
-		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
-		app:layout_constraintEnd_toStartOf = "@+id/button_04"
+		app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
+		app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
+		app:layout_constraintEnd_toStartOf = "@+id/bnt_ok"
 		android:layout_marginEnd = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_vk"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/button_04"
+		app:srcCompat = "@drawable/ic_vk"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/bnt_ok"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
 		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintStart_toStartOf = "@+id/bottom_09"
-		app:layout_constraintEnd_toEndOf = "@+id/bottom_10"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_ok"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/button_05"
+		app:layout_constraintStart_toStartOf = "@+id/btn_mail_ru"
+		app:layout_constraintEnd_toEndOf = "@+id/btn_discord"
+		app:srcCompat = "@drawable/ic_ok"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_instagram"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/button_04"
-		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
-		app:layout_constraintStart_toEndOf = "@+id/button_04"
+		app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
+		app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
+		app:layout_constraintStart_toEndOf = "@+id/bnt_ok"
 		android:layout_marginStart = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_instagram"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/button_06"
+		app:srcCompat = "@drawable/ic_instagram"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_telegram"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/button_04"
-		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
-		app:layout_constraintStart_toEndOf = "@+id/button_05"
+		app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
+		app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
+		app:layout_constraintStart_toEndOf = "@+id/btn_instagram"
 		android:layout_marginStart = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_telegram"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/bottom_07"
+		app:srcCompat = "@drawable/ic_telegram"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_gmail"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
-		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
-		app:layout_constraintEnd_toStartOf = "@+id/bottom_08"
+		app:layout_constraintTop_toTopOf = "@+id/btn_mail_ru"
+		app:layout_constraintBottom_toBottomOf = "@+id/btn_mail_ru"
+		app:layout_constraintEnd_toStartOf = "@+id/btn_facebook"
 		android:layout_marginEnd = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_gmail"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/bottom_08"
+		app:srcCompat = "@drawable/ic_gmail"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_facebook"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
-		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
-		app:layout_constraintEnd_toStartOf = "@+id/bottom_09"
+		app:layout_constraintTop_toTopOf = "@+id/btn_mail_ru"
+		app:layout_constraintBottom_toBottomOf = "@+id/btn_mail_ru"
+		app:layout_constraintEnd_toStartOf = "@+id/btn_mail_ru"
 		android:layout_marginEnd = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_facebook"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/bottom_09"
+		app:srcCompat = "@drawable/ic_facebook"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_mail_ru"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toBottomOf = "@+id/button_04"
+		app:layout_constraintTop_toBottomOf = "@+id/bnt_ok"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_marginTop = "12dp"
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_mail_ru"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/bottom_10"
+		app:srcCompat = "@drawable/ic_mail_ru"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_discord"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
-		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
-		app:layout_constraintStart_toEndOf = "@+id/bottom_09"
+		app:layout_constraintTop_toTopOf = "@+id/btn_mail_ru"
+		app:layout_constraintBottom_toBottomOf = "@+id/btn_mail_ru"
+		app:layout_constraintStart_toEndOf = "@+id/btn_mail_ru"
 		android:layout_marginStart = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_discord"
-		android:background = "@drawable/shape_button"/>
-	<ImageButton android:id = "@+id/bottom_11"
+		app:srcCompat = "@drawable/ic_discord"
+		android:background = "@drawable/shape_button"
+		/>
+
+	<ImageButton
+		android:id = "@+id/btn_microsoft"
 		android:layout_width = "48dp"
 		android:layout_height = "48dp"
-		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
-		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
-		app:layout_constraintStart_toEndOf = "@+id/bottom_10"
+		app:layout_constraintTop_toTopOf = "@+id/btn_mail_ru"
+		app:layout_constraintBottom_toBottomOf = "@+id/btn_mail_ru"
+		app:layout_constraintStart_toEndOf = "@+id/btn_discord"
 		android:layout_marginStart = "12dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_microsoft"
-		android:background = "@drawable/shape_button"/>
+		app:srcCompat = "@drawable/ic_microsoft"
+		android:background = "@drawable/shape_button"
+		/>
 </androidx.constraintlayout.widget.ConstraintLayout>
