--- a/app/src/main/res/layout/c_authorization.xml
+++ b/app/src/main/res/layout/c_authorization.xml
@@ -1,46 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	tools:context = ".MainActivity"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	>
 
-	<ImageView
-		android:id = "@+id/background"
+	<data>
+
+		<variable
+			name = "viewmodel"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
+
+		<import type = "android.view.View"/>
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width = "match_parent"
-		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/shape_card"
-		/>
+		android:layout_height = "match_parent"
+		tools:context = ".MainActivity"
+		>
 
-	<include
-		android:id = "@+id/include_social_network"
-		layout = "@layout/c_social_network"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "@+id/background"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"
-		/>
+		<ImageView
+			android:id = "@+id/iv_background"
+			android:layout_width = "match_parent"
+			android:layout_height = "0dp"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:layout_margin = "16dp"
+			android:background = "@drawable/shape_card"
+			/>
 
-	<Button
-		android:id = "@+id/btn_auth_info"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "60dp"
-		android:background = "@drawable/shape_button"
-		android:text = "@string/btn_auth_info_text"
-		android:clickable = "false"
-		/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+		<include
+			android:id = "@+id/include_social_network"
+			layout = "@layout/c_social_network"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toTopOf = "@+id/iv_background"
+			app:layout_constraintStart_toStartOf = "@+id/iv_background"
+			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+			android:layout_marginTop = "16dp"
+			app:viewmodel = "@{viewmodel}"
+			/>
+
+		<Button
+			android:id = "@+id/btn_auth_info"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
+			app:layout_constraintStart_toStartOf = "@+id/iv_background"
+			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+			android:layout_marginTop = "60dp"
+			android:background = "@drawable/shape_button"
+			android:text = "@string/btn_auth_info_text"
+			android:clickable = "false"
+			/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
