--- a/app/src/main/res/layout/c_registration_03.xml
+++ b/app/src/main/res/layout/c_registration_03.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
@@ -18,32 +17,32 @@
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="16dp"
-                   android:background="@drawable/shape_card"/>
-        <EditText android:id="@+id/contact_01"
-                  android:layout_width="0dp"
-                  android:layout_height="wrap_content"
-                  app:layout_constraintTop_toTopOf="@+id/background"
-                  app:layout_constraintStart_toStartOf="@+id/background"
-                  app:layout_constraintEnd_toEndOf="@+id/background"
-                  android:layout_marginTop="16dp"
-                  android:layout_marginHorizontal="16dp"
-                  style="@style/text_color_and_size"
-                  android:inputType="text"
-                  android:hint="@string/phone_number"
-                  android:textAlignment="textEnd"
-                  android:text="@={viewmodel.regContact}"/>
+                   android:background="@drawable/shape_card" app:layout_constraintHorizontal_bias="1.0"
+                   app:layout_constraintVertical_bias="1.0"/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_reg_contact"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toTopOf="@+id/background"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintEnd_toEndOf="@+id/background"/>
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floatingActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/contact_01"
+                app:layout_constraintTop_toBottomOf="@+id/rv_reg_contact"
                 app:layout_constraintStart_toStartOf="@+id/background"
                 app:layout_constraintEnd_toEndOf="@+id/background"
                 android:layout_marginTop="16dp"
                 app:backgroundTint="@color/theme_1_color_1"
                 android:focusable="true"
                 app:srcCompat="@drawable/ic_plus"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:onClick="@{() -> viewmodel.btnAddContactClick()}"/>
         <Button android:id="@+id/registration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,8 +51,9 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/shape_button"
-                android:text="@string/registration" android:layout_marginTop="24dp"
+                android:text="@string/registration"
+                android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
-        android:onClick="@{() -> viewmodel.btnRegClick()}"/>
+                android:onClick="@{() -> viewmodel.btnRegClick()}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
