--- a/app/src/main/res/layout/fragment_reg_recycler.xml
+++ b/app/src/main/res/layout/fragment_reg_recycler.xml
@@ -27,6 +27,7 @@
                 android:layout_marginTop="?attr/actionBarSize"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
